fix: color variable names and gap size

--- a/src/pages/MyVacanciesPage/MyVacanciesPage.scss
+++ b/src/pages/MyVacanciesPage/MyVacanciesPage.scss
@@ -1,5 +1,5 @@
 .my-vacancies {
-  color: #fff;
+  color: var(--white);
   background-color: var(--black-900);
   background-image: url(../../assets/OrnamentationPromo.svg);
   background-repeat: no-repeat;
@@ -18,7 +18,7 @@
   margin-top: 32px;
   margin-bottom: 70px;
   display: grid;
-  gap: 40px 140px;
+  gap: 40px;
   grid-template-columns: repeat(2, 1fr);
   justify-content: space-around;
 }
@@ -33,10 +33,10 @@
   gap: 20px;
   border-radius: 12px;
   background-color: #fff;
-  color: var(--main-black-900, #1a1b22);
+  color: var(--black-900, #1a1b22);
 
   &_disabled {
-    color: rgb(26, 27, 34, 0.4);
+    color: rgba(26, 27, 34, 0.4);
   }
 
   &__title {
@@ -57,43 +57,49 @@
     line-height: 24px; /* 120% */
     margin-right: 12px;
   }
+
   &__budget {
     margin: 0;
-    color: var(--main-black-500, #797981);
+    color: var(--black-500, #797981);
     font-family: "YS Text";
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 20px; /* 125% */
   }
+
   &__city {
     margin: 0;
-    color: var(--main-black-500, #797981);
+    color: var(--black-500, #797981);
     font-family: "YS Text";
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 133.333% */
   }
+
   &__contacts {
     display: grid;
     gap: 8px;
 
-    color: var(--main-black-500, #797981);
+    color: var(--black-500, #797981);
     font-family: "YS Text";
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 133.333% */
   }
+
   &__phone {
     margin: 0;
   }
+
   &__email {
     margin: 0;
   }
+
   &__link {
-    color: var(--main-blue, #5a9bff);
+    color: var(--blue, #5a9bff);
     /* Заголовки/H3_Medium */
     font-family: "YS Display";
     font-size: 20px;
